# ai-job-search-cmake

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
data/: job_skills.txt  resume_skills.txt
include/: job_matcher.h
src/: job_matcher.c  main.c
tests/: test_job_matcher.c
